--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <div class="header-bg">
         <div class="container">
             <div class="main-header">
-                <a href="#"><img src="img/header logo.jpg" alt="header-logo" id="header-logo"></a>
+                <a href="#"><img src="img/header-logo.png" alt="header-logo" id="header-logo"></a>
 
                 <div class="header-right">
                     <div class="delivery">
-                        <img src="img/logo-motor.jpg" alt="logo-motor">
                         <a href="tel:+1 234 567 890">Express Delivery +1 234 567 890</a>
                     </div>
 
@@ -40,7 +39,44 @@
                 </div>
             </div>
         </div>
+
+        <!--header-main-->
+
+        <div class="container">
+            <div class="main1">
+                <div class="main1-left">
+                    <p>It is a good time for the great taste of burgers</p>
+                    <h1>BURGER</h1>
+                    <h2>WEEK</h2>
+                </div>
+
+                <div class="main1-imgs">
+                    <img src="img/main1-fries.png" alt="main1-fries" id="main1-fries">
+                    <img src="img/main1-colaturca.png" alt="main1-cola" id="main1-cola">
+                    <img src="img/main1-burger.png" alt="main1-burger" id="main1-burger">
+                    <div class="main1-price">
+                        <section>
+                            <p>$5.49 <br> Only</p>
+                        </section>
+                    </div>
+                    <img src="img/burger-shadow.png" alt="burger-shadow" id="burger-shadow1">
+                    <img src="img/burger-shadow.png" alt="burger-shadow" id="burger-shadow2">
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!--try it-->
+
+    
+
+
+
+
+
+
+
+
 
 
     <!--order-->
