--- a/index.html
+++ b/index.html
@@ -132,6 +132,28 @@
 
     <!--events-->
 
+    <div class="events">
+        <div class="container">
+            <div class="events-card">
+                <div class="events-text">
+                    <h2>Discover</h2>
+                    <h1>Upcoming Events</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. </p>
+                </div>
     
+                <div class="events-img">
+                    <img src="img/event-img.png" alt="event-img" id="event-img">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--reservation-->
+
+    
+
+
+
+
 </body>
 </html>
