--- a/index.html
+++ b/index.html
@@ -150,7 +150,31 @@
 
     <!--reservation-->
 
-    
+    <div class="reservation">
+        <div class="reservation-left">
+            <img src="img/reserve-burger.png" alt="reserve-burger" id="reserve-burger">
+            <img src="img/reserve-bottle.png" alt="reserve-bottle" id="reserve-bottle">
+        </div>
+
+        <div class="reservation-main">
+            <h3>RESERVATION</h3>
+            <h1>Book your table</h1>
+            <div class="reservation-inputs">
+                <input type="text" placeholder="NAME">
+                <input type="text" placeholder="DATE">
+                <input type="text" placeholder="PEOPLE">
+                <input type="email" placeholder="EMAIL">
+                <input type="text" placeholder="TIME">
+                <a href="#">Find A Table</a>
+            </div>
+        </div>
+
+        <div class="reservation-right">
+            <img src="img/reserve-plate.png" alt="reserve-plate" id="reserve-plate">
+        </div>
+    </div>
+
+    <!--footer-->
 
 
 
