--- a/index.html
+++ b/index.html
@@ -176,7 +176,28 @@
 
     <!--footer-->
 
+    <!--<div class="container">
+        <footer>
+            <div class="footer-text">
+                <img src="img/header-logo.png" alt="footer-logo" id="footer-logo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viver ra maecenas accumsan lacus vel facilisis. </p>
+            </div>
 
+            <div class="footer-info">
+                <div class="footer-adress">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Main Road, Building Name, Country</p>
+                </div>
+
+                <div class="footer-email">
+                    <i class="fa-solid fa-envelope"></i>
+                    <a href="email:info@companyname.com">info@companyname.com</a>
+                </div>
+            </div>
+
+            
+        </footer>
+    </div>-->
 
 
 </body>
